Get values in correct alignment. Total score column

--- a/client/source/scripts/views/resultsView.less
+++ b/client/source/scripts/views/resultsView.less
@@ -45,6 +45,8 @@
             border: solid;
             border-color: gray;
             border-width: 1px;
+
+            text-align: center;
         }
 
         .descriptionContainer {
